--- a/src/app/Components/searchdetails/searchdetails.component.html
+++ b/src/app/Components/searchdetails/searchdetails.component.html
@@ -29,5 +29,15 @@
         <p class="aria_parag">{{selectedResturant.restaurantType}}</p>
         <ngb-rating [max]="5" [rate]="5"  [readonly]="true"></ngb-rating>
       </div>
+      <div class="card-footer">
+        <div class="row">
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <span style="color: green; font-size: small;"> <img src="../../../assets/images/check-mark-circle.svg"> order online</span>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <span style="color: darkorange; font-size: small;"><i class="fas fa-map-marked-alt" style="color: darkorange;"></i> Live Tracking</span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
