--- a/src/app/Components/overview-dashboard/overview-dashboard.component.html
+++ b/src/app/Components/overview-dashboard/overview-dashboard.component.html
@@ -1,91 +1,121 @@
 <div class="container">
-    <h2 style="color: #E5533A; margin-top: 20px;">Resturant Overview</h2>
-    <br>
-    <div class="icons_container">
-        <div>
-            <span class="dot"><i class="fas fa-eye"></i></span>
-            <h4>8,400</h4>
-            <span class="text">Daily Visits</span>
-        </div>
+  <h1
+    class="text-center display-3 mb-5 font-weight-bold"
+    style="color: #e5533a; margin-top: 20px"
+  >
+    El MENUS OVERVIEW
+  </h1>
+  <br />
+  <div class="icons_container">
+    <div>
+      <span class="dot" style="background-color: orange"
+        ><i class="fas fa-users"></i
+      ></span>
 
-        <div>
-            <span class="dot" style="background-color: #3498DB;"><i class="fas fa-shopping-cart"></i></span>
-            <h4>52,160</h4>
-            <span class="text">Sales</span>
-        </div>
-
-        <div>
-            <span class="dot" style="background-color: #E5533A;"><i class="fas fa-comments"></i></span>
-            <h4>10,160</h4>
-            <span class="text">Comments</span>
-        </div>
-
-        <div>
-            <span class="dot" style="background-color: orange;"><i class="fas fa-users"></i></span>
-            <h4>36,560</h4>
-            <span class="text">No. Of Visits</span>
-        </div>
-
+      <h4 class="text-center m-0 pt-2">{{ usersListLength }}</h4>
+      <h6 class="text text-center m-0 pt-2">No. Of Users</h6>
     </div>
 
-<!----------------------------------------------------------------------------->
-<div class="icons_container sec_container" style="margin-top: 20px;">
-<div>
-<svg>
-<circle class="c1" cx="120" cy="90" r="43"></circle>
-<circle class="c2" cx="120" cy="90" r="43"></circle>
-<text x="105px" y="105px" stroke="#000">85%</text>
-</svg>
-<h4>5,854</h4>
-<span class="text">Order Received</span>
-</div>
+    <div>
+      <span class="dot" style="background-color: #3498db"
+        ><i class="fas fa-shopping-cart"></i
+      ></span>
 
-<div>
-<svg>
-<circle class="c3" cx="120" cy="90" r="43"></circle>
-<circle class="c4" cx="120" cy="90" r="43"></circle>
-<text x="105px" y="105px" stroke="#000">50%</text>
-</svg>
-<h4>2,584</h4>
-<span class="text">Order Delivered</span>
-</div>
+      <h4 class="text-center m-0 pt-2">{{ ordersListLength }}</h4>
+      <h6 class="text text-center m-0 pt-2">Orders</h6>
+    </div>
 
-<div>
-<svg>
-<circle class="c5" cx="120" cy="90" r="43"></circle>
-<circle class="c6" cx="120" cy="90" r="43"></circle>
-<text x="105px" y="105px" stroke="#000">90%</text>
-</svg>
-<h4>9,874</h4>
-<span class="text">New Customer</span>
-</div>
+    <div>
+      <span class="dot" style="background-color: #6c22f5"
+        ><i class="fas fa-star"></i
+      ></span>
+      <h4 class="text-center m-0 pt-2">{{ reviewsListLength }}</h4>
+      <h6 class="text text-center m-0 pt-2">Reviews</h6>
+    </div>
 
-<div>
-<svg>
-<circle class="c7" cx="120" cy="90" r="43"></circle>
-<circle class="c8" cx="120" cy="90" r="43"></circle>
-<text x="105px" y="105px" stroke="#000">30%</text>
-</svg>
-<h4>2,000</h4>
-<span class="text">No. Of Resturants</span>
-</div>
+    <div>
+      <span class="dot" style="background-color: #1abb1a"
+        ><i class="fas fa-store"></i
+      ></span>
+      <h4 class="text-center m-0 pt-2">{{ restaurantListLength }}</h4>
+      <h6 class="text text-center m-0 pt-2">Restaurants</h6>
+    </div>
 
-</div>
-<!------------------------------------------------------------------------------>
-<!--------------------- Line Chart------------------------------------------------------->
-<div class="card" style="margin-top: 40px;">
+    <div>
+      <span class="dot" style="background-color: #e5533a"
+        ><i class="fas fa-hamburger"></i
+      ></span>
+      <h4 class="text-center m-0 pt-2">{{ menusListLength }}</h4>
+      <h6 class="text text-center m-0 pt-2">Menus</h6>
+    </div>
+  </div>
 
-<!-- Card header -->
-<div class="card-header" style="text-align: center;color: #E5533A;"><h2>Line chart</h2></div>
+  <!----------------------------------------------------------------------------->
+  <!-- <div class="icons_container sec_container" style="margin-top: 20px">
+    <div>
+      <svg>
+        <circle class="c1" cx="120" cy="90" r="43"></circle>
+        <circle class="c2" cx="120" cy="90" r="43"></circle>
+        <text x="105px" y="105px" stroke="#000">85%</text>
+      </svg>
+      <h4>5,854</h4>
+      <span class="text">Order Received</span>
+    </div>
 
-<!--Card content-->
-<div class="card-body">
+    <div>
+      <svg>
+        <circle class="c3" cx="120" cy="90" r="43"></circle>
+        <circle class="c4" cx="120" cy="90" r="43"></circle>
+        <text x="105px" y="105px" stroke="#000">50%</text>
+      </svg>
+      <h4>2,584</h4>
+      <span class="text">Order Delivered</span>
+    </div>
 
-<canvas id="lineChart"></canvas>
+    <div>
+      <svg>
+        <circle class="c5" cx="120" cy="90" r="43"></circle>
+        <circle class="c6" cx="120" cy="90" r="43"></circle>
+        <text x="105px" y="105px" stroke="#000">90%</text>
+      </svg>
+      <h4>9,874</h4>
+      <span class="text">New Customer</span>
+    </div>
 
-</div>
+    <div>
+      <svg>
+        <circle class="c7" cx="120" cy="90" r="43"></circle>
+        <circle class="c8" cx="120" cy="90" r="43"></circle>
+        <text x="105px" y="105px" stroke="#000">30%</text>
+      </svg>
+      <h4>2,000</h4>
+      <span class="text">No. Of Resturants</span>
+    </div>
+  </div> -->
+  <!------------------------------------------------------------------------------>
+  <!--------------------- Line Chart------------------------------------------------------->
+  <div class="card" style="margin-top: 40px">
+    <!-- Card header -->
+    <div class="card-header" style="text-align: center; color: #e5533a">
+      <h2>The Orders Line chart</h2>
+    </div>
 
-</div><br><br>
+    <!--Card content-->
+    <div class="card-body">
+      <!-- <canvas id="lineChart"></canvas> -->
+      <div style="display: block">
+        <canvas *ngIf="ordersListLength"
+          baseChart
+          [datasets]="lineChartData"
+          [labels]="lineChartLabels"
+          [options]="lineChartOptions"
+          [legend]="lineChartLegend"
+          chartType='line'
+        ></canvas>
+      </div>
+    </div>
+  </div>
+  <br /><br />
 
-<!------------------------------------------------------------------------------------>
+  <!------------------------------------------------------------------------------------>
 </div>
