--- a/src/app/Components/overview-dashboard/overview-dashboard.component.scss
+++ b/src/app/Components/overview-dashboard/overview-dashboard.component.scss
@@ -12,7 +12,7 @@
 .dot {
     height: 85px;
     width: 85px;
-    background-color: rgb(26, 187, 26);
+    background-color: #1abb1a;
     border-radius: 50%;
     display: inline-block;
     margin-left: 35%;
