--- a/src/app/Components/resturant-menu/resturant-menu.component.scss
+++ b/src/app/Components/resturant-menu/resturant-menu.component.scss
@@ -25,6 +25,19 @@
     font-size: 20px;
 
 }
+.img-modal{
+    max-width: 100%;
+    max-height: 60%;
+}
+input[type=radio]:checked {
+    background-color: #E5533A ;
+}
+.radio-txt{
+    font-size: 16px;
+    font-weight: 600;
+    color: #2a2b2c;
+    padding-left: 5px ;
+}
 .link{
 cursor: pointer;
 }
@@ -32,4 +45,19 @@ cursor: pointer;
 .orderDetials p i{
 position: relative;
 top:-4px;
+}
+.openOrderModal:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.popover-custom{
+ padding:8px;
+}
+.flx{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.itemsCheckout{
+    border-bottom: 1px solid #dfe2e6;
 }
