--- a/src/app/Components/resturant/resturant.component.scss
+++ b/src/app/Components/resturant/resturant.component.scss
@@ -28,6 +28,9 @@ body{
     border-radius: 50%;
     border: 3px solid #ffffff;
     z-index: 2222;
+    overflow:hidden;
+    width:230px;
+    height: 200px;
 
 }
 .cove-logo-content{
