--- a/src/app/Components/resturant-reviews/resturant-reviews.component.html
+++ b/src/app/Components/resturant-reviews/resturant-reviews.component.html
@@ -1,6 +1,37 @@
-<div class="row mx-0">
     <div class="col-md-9 pt-3">
       <h4 class="collection-title">Reviews</h4>
+      <br/>
+      <button class="btn buttonAdd-outline btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Write Review <i class="far fa-arrow-alt-circle-down"></i>
+      </button>
+      <div class="collapse" id="collapseExample">
+        <div class="add-review jumbotron">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Name :</span>
+            </div>
+            <input type="text" [(ngModel)]="userName" class="form-control" placeholder="Your Name"  aria-describedby="basic-addon1">
+          </div>
+          
+          <div class="input-group mb-3">
+            <div class="input-group-append">
+              <span class="input-group-text" id="basic-addon2"> Rate :</span>
+            </div>
+            <input type="number" [(ngModel)]="rate" class="form-control" max="5" min="1" aria-describedby="basic-addon2">
+           
+          </div>
+          
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Comment :</span>
+            </div>
+            <textarea class="form-control" [(ngModel)]="comment" aria-label="With textarea"></textarea>
+          </div>
+          <br/>
+          <button class="btn buttonAdd float-right" (click)='addReview()'> Add </button>
+        </div>
+      </div>
+      
       <div class="jumbotron" *ngFor="let item of reviewList">
         <div class="container">
           <h4 class="area-title ">{{item.userName}}</h4>
@@ -16,21 +47,3 @@
         </div>
       </div>
     </div>
-    <!-- sidebar -->
-    <div class="col-md-3 pt-3">
-      <div class="card" style="width: 18rem;">
-          <div class="card-body">
-              <div class="sv">
-                  <svg id="delivery-icon" viewBox="0 0 35 35">
-                      <path fill-rule="evenodd" clip-rule="evenodd" fill="#e5533a"
-                          d="M16.954 5.998c-2.452 1.25-.503 4.423 1.676 3.367 2.307-1.12.603-4.528-1.676-3.367zm2.415 13.69l-5.411-1.92c-.223-.904-.019-1.99.179-3.039.06-.324.121-.645.168-.956.063-.415.112-.787.157-1.12.3-2.258.364-2.736 2.597-2.332 1.017.185 2.325 1.765 3.14 2.75.128.155.245.296.346.414.445-.087.926-.273 1.39-.452 1.25-.484 2.37-.918 2.291.785-.385.292-2.842 1.205-3.333 1.296-.994.183-1.413-.244-1.863-.702-.122-.124-.246-.25-.385-.368-.133-.113-.202-.179-.246-.22a.598.598 0 0 0-.074-.065c-.027-.017-.057-.03-.126-.056a9.735 9.735 0 0 1-.266-.108l-.435 3.076c.175.066.376.136.594.213 1.355.474 3.336 1.168 3.416 2.35.047.708-.93 4.582-1.146 5.292-2.118.425-2.045.119-1.59-1.805.176-.748.41-1.742.597-3.032zm5.177-.304l-1.367-4.271 1.168-.439.407.615c.677-.4 1.728-.333 1.94.605.182.798-.26 1.073-.717 1.356a3.311 3.311 0 0 0-.436.305c.107.19.17.37.228.534.108.306.197.559.508.73.118.066.318.12.57.187.87.233 2.356.63 3.203 2.254-.633.604-1.012.427-1.558.17a4.28 4.28 0 0 0-.907-.336c-2.646-.596-5.028.916-5.363 4.226l-.175.81-6.283-.007c-.4-.482-.77-1.041-1.143-1.605-.785-1.187-1.584-2.394-2.708-2.942-2.718-1.325-4.557.451-5.382 1.248-.173.166-.301.29-.384.334-.193-1.812.252-2.929 1.066-4.048a552.11 552.11 0 0 1 4.11-.004h.005l1.259.001c.354 0 .703-.014 1.043-.028 1.441-.059 2.698-.11 3.306.998-.202.382-1.357 1.205-1.897 1.465l1.598 3.594 4.252-.052c.917-2.987 1.604-3.85 3.657-5.7zM4.34 12.804c0 .431-.005.841-.01 1.237-.018 1.332-.033 2.513.164 3.9 1.08.37 7.158.425 8.098-.044.246-.806.213-2.728.189-4.133-.006-.365-.012-.695-.012-.96 0-1.075-.328-1.297-1.402-1.297H5.786c-1.142 0-1.446.131-1.446 1.296zm24.32 13.023c-.809 2.478-4.982 1.597-4.1-1.24.791-2.552 4.931-1.3 4.1 1.24zM25.53 21.9c-4.681 1.406-2.378 8.206 2.284 6.679 1.516-.497 2.957-2.338 2.234-4.467-.527-1.546-2.325-2.87-4.519-2.212zM9.494 23.25c2.778-.716 3.733 3.358 1.06 3.997-2.793.667-3.884-3.268-1.06-3.997zm-.482-1.415c-4.579 1.28-2.764 8.004 1.95 6.82 1.634-.41 3.044-2.19 2.573-4.26-.373-1.639-2.418-3.148-4.523-2.56z">
-                      </path>
-                  </svg>
-              </div>
-              <h2 class="card-title">Delivers to<span> District 3 6th of October</span></h2>
-              <button class="btn btn-address">Change Adress<i
-                      class="fas fa-arrow-right float-right"></i></button>
-          </div>
-      </div>
-    </div>
-</div>
