--- a/src/app/Components/customers-dashboard/customers-dashboard.component.html
+++ b/src/app/Components/customers-dashboard/customers-dashboard.component.html
@@ -1,1 +1,26 @@
-<p>customers-dashboard works!</p>
+<div class="container">
+    <h2 style="color: #E5533A; margin-top: 20px;">Customer List</h2>
+   <br><br>
+ <div class="row justify-content-center">
+   <div class="col-8">
+    <div style="overflow-x:auto;">
+      <table class="table table-hover">
+          <thead class="text-center" style="background-color: #E5533A; color: white;">
+            <tr style="font-size: 19px;">
+            <th scope="col">UserName</th>
+            <th scope="col">Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of customersList;index as i">
+            <td><img src="assets/user.jpg" class="img-responsive img-circle rounded-circle" width="50px" height="50px" style="margin-right: 10px;"> {{item.name}}</td>
+            <td class="text-center">{{item.email}}</td>
+          </tr>
+          
+        </tbody>
+      </table>
+      </div>
+</div>
+</div>
+</div> 
+
