--- a/src/app/Components/track-order/track-order.component.html
+++ b/src/app/Components/track-order/track-order.component.html
@@ -2,48 +2,56 @@
 <app-loading *ngIf="showLoading; else content"></app-loading>
 
 <ng-template #content>
-  
-<div class="container" id="orderContainer">
-  <article class="card">
-    <header class="card-header"> My Orders / Tracking </header>
-    <div class="card-body">
-      <h6>Order ID: {{selectedOrder.orderID}}</h6>
-      <article class="card">
-        <div class="card-body row">
-          <div class="col"> <strong>Estimated Delivery time:</strong> <br>{{selectedOrder.orderDate}} </div>
-          <div class="col"> <strong>Shipping to:</strong> <br> {{selectedOrder.userName}} | <i class="fa fa-phone"></i> {{selectedOrder.userPhone}} </div>
-          <div class="col"> <strong>Status:</strong> <br> {{selectedOrder.orderStatus}} </div>
-        </div>
-      </article>
-      <div class="track">
-        <div class="step active"> <span class="icon"> <i class="fa fa-check"></i> </span> <span class="text">Order placed</span> </div>
-        <div class="step active"> <span class="icon"> <i class="fa fa-user"></i> </span> <span class="text"> Picked by delivery</span> </div>
-        <div class="step"> <span class="icon"> <i class="fa fa-motorcycle"></i> </span> <span class="text"> On the way </span> </div>
-        <div class="step"> <span class="icon"> <i class="fa fa-people-carry"></i> </span> <span class="text">Ready for pickup</span> </div>
-      </div>
-      <hr>
 
-      <div class="container-fluid my-5 d-flex justify-content-center">
-        <div class="card card-1">
-          <div class="card-header bg-white">
-            <div class="media flex-sm-row flex-column-reverse justify-content-between ">
-              <div class="col my-auto">
-                <h4 class="mb-0">Your order from <span class="change-color">{{(restaurant.restaurantName).toUpperCase()}}</span> details:</h4>
-              </div>
-              <div class="col-auto text-center my-auto pl-0 pt-sm-4"> <img class="img-fluid my-auto align-items-center mb-0 pt-3" src="{{restaurant.restaurantFeaturedPhotos[0]}}" width="115" height="115">
-                <p class="mb-4  mt-4 pt-0 Glasses">{{selectedOrder.orderDate}}</p>
-              </div>
-            </div>
+  <div class="container" id="orderContainer" *ngIf="orderStatus; else cancel">
+    <article class="card">
+      <header class="card-header"> My Orders / Tracking </header>
+      <div class="card-body">
+        <h6>Order ID: {{selectedOrder.orderID}}</h6>
+        <article class="card">
+          <div class="card-body row">
+            <div class="col"> <strong>Estimated Delivery time:</strong> <br>{{selectedOrder.orderDate}} </div>
+            <div class="col"> <strong>Shipping to:</strong> <br> {{selectedOrder.userName}} | <i
+                class="fa fa-phone"></i> {{selectedOrder.userPhone}} </div>
+            <div class="col"> <strong>Status:</strong> <br> <span style="color: #E6533A;">{{selectedOrder.orderStatus}}</span></div>
           </div>
-          <div class="card-body">
-            <div class="row justify-content-between mb-3">
-              <div class="col-auto">
-                <h6 class="color-1 mb-0 change-color">Receipt</h6>
+        </article>
+        <div class="track">
+          <div class="step active"> <span class="icon"> <i class="fa fa-check"></i> </span> <span class="text">Order
+              placed</span> </div>
+          <div class="step active"> <span class="icon"> <i class="fa fa-user"></i> </span> <span class="text"> Picked by
+              delivery</span> </div>
+          <div class="step"> <span class="icon"> <i class="fa fa-motorcycle"></i> </span> <span class="text"> On the way
+            </span> </div>
+          <div class="step"> <span class="icon"> <i class="fa fa-people-carry"></i> </span> <span class="text">Ready for
+              pickup</span> </div>
+        </div>
+        <hr>
+
+        <div class="container-fluid my-5 d-flex justify-content-center">
+          <div class="card card-1">
+            <div class="card-header bg-white">
+              <div class="media flex-sm-row flex-column-reverse justify-content-between ">
+                <div class="col my-auto">
+                  <h4 class="mb-0">Your order from <span
+                      class="change-color">{{(restaurant.restaurantName).toUpperCase()}}</span> details:</h4>
+                </div>
+                <div class="col-auto text-center my-auto pl-0 pt-sm-4"> <img
+                    class="img-fluid my-auto align-items-center mb-0 pt-3"
+                    src="{{restaurant.restaurantFeaturedPhotos[0]}}" width="115" height="115">
+                  <p class="mb-4  mt-4 pt-0 Glasses">{{selectedOrder.orderDate}}</p>
+                </div>
               </div>
             </div>
+            <div class="card-body">
+              <div class="row justify-content-between mb-3">
+                <div class="col-auto">
+                  <h6 class="color-1 mb-0 change-color">Receipt</h6>
+                </div>
+              </div>
 
-            <div class=" mt-4" *ngFor="let item of selectedOrder.items">
-              <!-- <div class="col">
+              <div class=" mt-4" *ngFor="let item of selectedOrder.items">
+                <!-- <div class="col">
                 <div class="card card-2">
                   <div class="card-body row">
                     <div class="media">
@@ -64,46 +72,46 @@
                   </div>
                 </div>
               </div> -->
-              <div class="card">
-                <div class="card-body row align-items-center">
-                  <div class="col-md-2 col-sm-4">
-                    <img class="" src="{{item.dishImage}}" width="135" height="135" />
-                  </div>
-                  <div class="col-md-2 col-sm-5">
-                    <h4>{{item.dishName}}</h4>
-                  </div>
-                  <div class="col-md-4 col-sm-12">
-                    <p>{{item.dishDescription}}</p>
-                  </div>
+                <div class="card">
+                  <div class="card-body row align-items-center">
+                    <div class="col-md-2 col-sm-4">
+                      <img class="" src="{{item.dishImage}}" width="135" height="135" />
+                    </div>
+                    <div class="col-md-2 col-sm-5">
+                      <h4>{{item.dishName}}</h4>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                      <p>{{item.dishDescription}}</p>
+                    </div>
 
-                  <div class="col-md-2 col-sm-6">
-                    <p>Qty: {{item.dishQuantity}}</p>
-                  </div>
+                    <div class="col-md-2 col-sm-6">
+                      <p>Qty: {{item.dishQuantity}}</p>
+                    </div>
 
-                  <div class="col-md-2 col-sm-6">
-                    <p>{{item.dishPrice}} EGP</p>
+                    <div class="col-md-2 col-sm-6">
+                      <p>{{item.dishPrice}} EGP</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            
 
-            
-            <div class="row mt-4">
-              <div class="col">
-                <div class="row justify-content-between">
-                  <div class="col-auto">
-                    <p class="mb-1 text-dark"><b>Order Details</b></p>
+
+
+              <div class="row mt-4">
+                <div class="col">
+                  <div class="row justify-content-between">
+                    <div class="col-auto">
+                      <p class="mb-1 text-dark"><b>Order Details</b></p>
+                    </div>
+                    <div class="flex-sm-col text-right col">
+                      <p class="mb-1"><b>Total</b></p>
+                    </div>
+                    <div class="flex-sm-col col-auto">
+                      <p class="mb-1">{{selectedOrder.totalPrice}} EGP</p>
+                    </div>
                   </div>
-                  <div class="flex-sm-col text-right col">
-                    <p class="mb-1"><b>Total</b></p>
-                  </div>
-                  <div class="flex-sm-col col-auto">
-                    <p class="mb-1">{{selectedOrder.totalPrice}} EGP</p>
-                  </div>
-                </div>
-                <!-- <div class="row justify-content-between">
+                  <!-- <div class="row justify-content-between">
                   <div class="flex-sm-col text-right col">
                     <p class="mb-1"> <b>Discount</b></p>
                   </div>
@@ -119,58 +127,71 @@
                     <p class="mb-1">61.50 EGP</p>
                   </div>
                 </div> -->
-                <div class="row justify-content-between">
-                  <div class="flex-sm-col text-right col">
-                    <p class="mb-1"><b>Delivery Fees</b></p>
-                  </div>
-                  <div class="flex-sm-col col-auto">
-                    <p class="mb-1">Free</p>
+                  <div class="row justify-content-between">
+                    <div class="flex-sm-col text-right col">
+                      <p class="mb-1"><b>Delivery Fees</b></p>
+                    </div>
+                    <div class="flex-sm-col col-auto">
+                      <p class="mb-1">Free</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <!-- <div class="row invoice" style="float: left;">
+              <!-- <div class="row invoice" style="float: left;">
               <div class="col">
                 <p class="mb-1"> Invoice Number : 788152</p>
                 <p class="mb-1">Invoice Date : 28 Dec, 2020</p>
               </div>
             </div> -->
-          </div>
-          <div class="card-footer">
-            <div class="jumbotron-fluid">
-              <div class="row justify-content-between ">
-                <div class="col-auto my-auto ">
-                  <h4 class="mb-0 font-weight-bold">TOTAL PAID</h4>
-                </div>
-                <div class="col-auto my-auto ml-auto">
-                  <h3>{{selectedOrder.totalPrice}} EGP</h3>
+            </div>
+            <div class="card-footer">
+              <div class="jumbotron-fluid">
+                <div class="row justify-content-between ">
+                  <div class="col-auto my-auto ">
+                    <h4 class="mb-0 font-weight-bold">TOTAL PAID</h4>
+                  </div>
+                  <div class="col-auto my-auto ml-auto">
+                    <h3>{{selectedOrder.totalPrice}} EGP</h3>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <a routerLink="/delivery" class="btn btn-warning" style="float: left;" data-abc="true">Back to restaurants</a>
-      <button href="#" class="btn btn-warning" onclick="document.getElementById('id01').style.display='block'" style="float: right;" data-abc="true">Cancel my order</button>
+        <a routerLink="/delivery" class="btn btn-warning" style="float: left;" data-abc="true">Back to restaurants</a>
+        <a class="btn btn-warning" onclick="document.getElementById('id01').style.display='block'" style="float: right;"
+          data-abc="true">Cancel my order</a>
 
-      <div id="id01" class="modal">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-        <form class="modal-content" action="/action_page.php">
-          <div class="cancel-container">
-            <h1>Cancel my order</h1>
-            <p>Are you sure you want to cancel your order?</p>
+        <div id="id01" class="modal">
+          <span onclick="document.getElementById('id01').style.display='none'" class="close"
+            title="Close Modal">&times;</span>
+          <form class="modal-content">
+            <div class="cancel-container">
+              <h3>Cancel my order</h3>
+              <h5>Are you sure you want to cancel your order?</h5>
 
-            <div class="clearfix">
-              <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Dismiss</button>
-              <button type="button" id="cancel-btn" class="deletebtn">Cancel</button>
+              <div class="clearfix">
+                <button type="button" onclick="document.getElementById('id01').style.display='none'"
+                  class="cancelbtn">Dismiss</button>
+                <button type="button" id="cancel-btn" class="deletebtn" (click)="cancelOrder()">Cancel</button>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
-    </div>
+    </article>
+  </div>
 
-  </article>
-</div>
+  <ng-template #cancel>
+    <div class="alert alert-dismissible alert-success p-4 m-5">
+      <strong>Well done!</strong> Your order will be canceled shortly.  <a [routerLink]="['/delivery']"
+        routerLinkActive="router-link-active" class="alert-link">Click here to discover more restaurants again.</a>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+  </ng-template>
 
 </ng-template>
 
