--- a/src/app/Components/searchdetails/searchdetails.component.html
+++ b/src/app/Components/searchdetails/searchdetails.component.html
@@ -4,12 +4,12 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" height="250px" src="{{selectedResturant.restaurantFeaturedPhotos[0]}}"
+              <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}"
                 alt="First slide">
             </div>
-            <div class="carousel-item active" *ngFor="let photo of selectedResturant.restaurantFeaturedPhotos">
+            <!-- <div class="carousel-item active" *ngFor="let photo of selectedResturant.restaurantFeaturedPhotos">
               <img class="d-block w-100" height="250px" src="{{photo}}" alt="First slide">
-            </div>
+            </div> -->
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
@@ -24,7 +24,7 @@
   
       <div class="card-body">
         <p class="paragraph">{{selectedResturant.restaurantName}}</p>
-        <img src="{{selectedResturant.restaurantFeaturedPhotos[0]}}" width="40px" height="40px"
+        <img src="{{selectedResturant.logo}}" width="40px" height="40px"
           style="float: left;margin-right: 6px;">
         <p class="aria_parag">{{selectedResturant.restaurantType}}</p>
         <ngb-rating [max]="5" [rate]="5"  [readonly]="true"></ngb-rating>
