--- a/src/app/Components/admin-login/admin-login.component.html
+++ b/src/app/Components/admin-login/admin-login.component.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <button style="background-color: #E5533A; color:white" class="btn btn-lg float-right" type="button"
-                  (click)="adminAuth.adminSignIn(email.value,password.value)">Login</button>
+                  (click)="auth.signInAdmin(email.value,password.value)">Login</button>
               </form>
             </div>
           </div>
