--- a/src/app/Components/resturant/resturant.component.html
+++ b/src/app/Components/resturant/resturant.component.html
@@ -10,7 +10,7 @@
     <div class="row mx-4 cove-logo-content">
         <div class="col-md-8 px-4">
             <div class="cover-logo">
-                <img src="{{restaurant?.logo}}" class="img-fluid"  alt="resturant-logo">
+                <img src="{{restaurant.logo}}" class="img-fluid"  alt="resturant-logo">
                 <div class="rest-info pt-2">
                     <h2 class="rest-name"> {{ restaurant?.restaurantName }} <span>order online</span></h2>
                     <h5 class="rest-type"> {{ restaurant?.restaurantType }} <span class="stars">
