Updating DineOut & TrackOreder

--- a/src/app/Components/track-order/track-order.component.html
+++ b/src/app/Components/track-order/track-order.component.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-auto text-center my-auto pl-0 pt-sm-4"> <img
                     class="img-fluid my-auto align-items-center mb-0 pt-3"
-                    src="{{restaurant.restaurantFeaturedPhotos[0]}}" width="115" height="115">
+                    src="{{restaurant.logo}}" width="115" height="115">
                   <p class="mb-4  mt-4 pt-0 Glasses">{{selectedOrder.orderDate}}</p>
                 </div>
               </div>
