--- a/src/app/Components/dine-out/dine-out.component.html
+++ b/src/app/Components/dine-out/dine-out.component.html
@@ -52,9 +52,9 @@
     <div class="container">
       <h1 class="row">
 
-        <div class="card col-lg-3" style="margin-left: 7%; margin-top:40px;" *ngFor="let item of restaurantsList">
-          <img class="card-img-top mt-2" src="{{item.restaurantFeaturedPhotos}}" style="width: 100%; height: 250px;"
-            alt="">
+        <div class="card col-lg-3" style="margin-left: 7%; margin-top:40px;" *ngFor="let item of restaurantsList" (click)="goRestaurant(item.id)">
+          <img class="card-img-top mt-2" src="{{item.logo}}" style="width: 100%; height: 250px;"
+            alt="" >
           <div class="card-body">
             <h6>Location: <strong>{{item.restaurantBranchs[0]}}</strong></h6>
             <h6>Phone: <strong>{{item.restaurantPhone}}</strong></h6>
@@ -77,10 +77,10 @@
     <div class="row" style="margin-left: 7%;">
       <div class="col-sm-10 ">
         <div class="row">
-          <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList">
-            <img [src]="item.restaurantFeaturedPhotos" width="100%" height="250px">
-            <img [src]="item.restaurantFeaturedPhotos" width="40px" height="40px"
-              style="float: left;margin-right: 6px;margin-top: 12px;">
+          <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList" (click)="goRestaurant(item.id)">
+            <img [src]="item.logo" width="100%" height="250px"  >
+            <img [src]="item.logo" width="40px" height="40px"
+              style="float: left;margin-right: 6px;margin-top: 12px;" >
             <p class="paragraph">{{item.restaurantName}}</p>
             <p class="aria_parag">{{item.restaurantType}}</p>
             <ngb-rating [max]="5" [rate]=4 [readonly]="true"></ngb-rating>
