--- a/src/app/Components/resturant-menu/resturant-menu.component.html
+++ b/src/app/Components/resturant-menu/resturant-menu.component.html
@@ -49,8 +49,9 @@
             type="button"
             class="btn btn-c"
             (click)="modal.close(); buy(item)"
+            [disabled]="userID == null"
           >
-            Buy
+            Add to cart
           </button>
         </div>
       </ng-template>
