--- a/src/app/Components/dine-out/dine-out.component.html
+++ b/src/app/Components/dine-out/dine-out.component.html
@@ -47,7 +47,7 @@
   <div class="container pl-3">
 
     <!--			 Discover by dishes-->
-    <h2 class="ml-4"> Discover by dishes</h2>
+    <h2 class="ml-4"> Discover by Locations</h2>
 
     <div class="container">
       <h1 class="row">
@@ -56,10 +56,11 @@
           <img class="card-img-top mt-2" src="{{item.logo}}" style="width: 100%; height: 250px;"
             alt="" >
           <div class="card-body">
-            <h6>Location: <strong>{{item.restaurantBranchs[0]}}</strong></h6>
-            <h6>Phone: <strong>{{item.restaurantPhone}}</strong></h6>
-            <h6>From: <strong>{{item.restaurantOpening}}</strong> To: <strong>{{item.restaurantClosing}}</strong></h6>
-            <h6>Type: <strong>{{item.restaurantType}}</strong></h6>
+            <h4 class="text-secondary">{{item.restaurantName}}</h4>
+            <h6>Phone: <strong class="color">{{item.restaurantPhone}}</strong></h6>
+            <h6>From: <strong class="color">{{item.restaurantOpening}}</strong> To: <strong class="color">{{item.restaurantClosing}}</strong></h6>
+            <h6>Type: <strong class="color">{{item.restaurantType}}</strong></h6>
+            <h6>Location: <strong class="color">{{item.adress}}</strong></h6>
 
           </div>
         </div>
@@ -73,11 +74,11 @@
 
     <!--			Discover Location-->
 
-    <h3 class="mt-5 mb-4">Discover {{restaurantsList[0].restaurantBranchs[0]}}</h3>
+    <!-- 
     <div class="row" style="margin-left: 7%;">
-      <div class="col-sm-10 ">
+      <div class="col-sm-10 card-lg-3">
         <div class="row">
-          <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList" (click)="goRestaurant(item.id)">
+          <div class="card-body" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList" (click)="goRestaurant(item.id)">
             <img [src]="item.logo" width="100%" height="250px"  >
             <img [src]="item.logo" width="40px" height="40px"
               style="float: left;margin-right: 6px;margin-top: 12px;" >
@@ -87,7 +88,31 @@
           </div>
 
         </div>
+      </div> -->
+
+
+      <h3 class="mt-5 mb-4">Discover {{restaurantsList[0].restaurantBranchs[0]}}</h3>
+
+      <div class="container">
+        <h1 class="row">
+  
+          <div class="card col-lg-3" style="margin-left: 7%; margin-top:40px;" *ngFor="let item of restaurantsList" (click)="goRestaurant(item.id)">
+            <!-- <img class="card-img-top mt-2" src="{{item.logo}}" style="width: 100%; height: 250px;"
+              alt="" > -->
+            <div class="card-body">
+              <img [src]="item.logo" width="100%" height="250px"  >
+              <img [src]="item.logo" width="40px" height="40px"
+              style="float: left;margin-right: 6px;margin-top: 12px;" >
+              
+              <h5 class="mt-2">{{item.restaurantName}}</h5>
+            <h6 class="color">{{item.restaurantType}}</h6>
+            <ngb-rating [max]="5" [rate]=4 [readonly]="true"></ngb-rating>
+            </div>
+          </div>
+  
+        </h1>
       </div>
+
 
     </div>
   </div>
