--- a/src/app/Components/pastorders/pastorders.component.scss
+++ b/src/app/Components/pastorders/pastorders.component.scss
@@ -3,6 +3,9 @@
     padding: 5%;
     margin-bottom: 10px;
 }
+.list-item-order:hover{
+    cursor: pointer;
+}
 .page-title {
     font-size: 45px;
     font-weight: 600;
